--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <!--<script src="sketch.js"></script>-->
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F3h3uBW0G75yWFJzudQocS1%2FWeb-and-MobileExtended%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
   </body>
 </html>
