Added css but gets overdrawed
I just put it in case so i don't have to delete (we never know)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="Lights.css">
     <meta charset="utf-8" />
-   
+
+        <div class="lights">
+          <img class="lights" src="Assetination/Lightflash.svg" alt="lights">
+        </div>
+      
    <style>
       body {
         background-image: url('Assetination/Paperbackground.jpg');
