--- a/Main.html
+++ b/Main.html
@@ -7,19 +7,12 @@
     <link rel="stylesheet" type="text/css" href="menu.css">
     <meta charset="utf-8" />
 
-       
-      
-   <style>
-      body {
-        background-image: url('Assetination/Paperbackground.jpg');
-      }
-      </style>
 
   </head>
   <body>
-    <div class="container">
+   <!--  <div class="container">
         <script class="javascript"src="sketch.js"></script>
-    </div>
+    </div> -->
     <!--<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F3h3uBW0G75yWFJzudQocS1%2FWeb-and-MobileExtended%3Fnode-id%3D0%253A1" allowfullscreen></iframe>-->
     <!-- <img class="frame" src="Assetination/polaroidframe.png"> -->
   </body>
