--- a/Main.html
+++ b/Main.html
@@ -10,6 +10,17 @@
 
   </head>
   <body>
+    
+    <img class="title" src="Assetination/polaroids/title.png" alt="title">
+
+    <div class="imagecontainer">
+        <img class="polaroidBlue"  src="Assetination/polaroids/bluepolaroid.png" >
+        <img class="polaroidPink"  src="Assetination/polaroids/pinkpolaroid.png" >
+        <img class="polaroidYellow"  src="Assetination/polaroids/yellowpolaroid.png" >
+        <img class="polaroidOrange"  src="Assetination/polaroids/orangepolaroid.png" >
+        <img class="polaroidgreen"  src="Assetination/polaroids/greenpolaroid.png" >
+        <img class="polaroiddarkblue"  src="Assetination/polaroids/darkbluepolaroid.png" >
+    </div>
    <!--  <div class="container">
         <script class="javascript"src="sketch.js"></script>
     </div> -->
