--- a/Main.html
+++ b/Main.html
@@ -12,6 +12,8 @@
   <body>
     
     <img class="title" src="Assetination/polaroids/title.png" alt="title">
+    <img class="thread" src="Assetination/polaroids/thread2.png" alt="thread">
+    <img class="cat" src="Assetination/polaroids/catwalking.gif" alt="walkingcat">
 
     <div class="imagecontainer">
         <img class="polaroidBlue"  src="Assetination/polaroids/bluepolaroid.png" >
