just trying out some stuff

--- a/Main.html
+++ b/Main.html
@@ -15,8 +15,21 @@
     <img class="thread" src="Assetination/polaroids/thread2.png" alt="thread">
     <img class="cat" src="Assetination/polaroids/catwalking.gif" alt="walkingcat">
 
+    <div class="commentsRight" >
+        <img class="boxdrawing"  src="Assetination/writtencomments/box1.png" >
+        <img class="catidea"  src="Assetination/writtencomments/catidea.png" >
+        <img class="kitty"  src="Assetination/writtencomments/kitty.png" >
+    </div>
+
+    <div class="commentsLeft" >
+        <img class="play"  src="Assetination/writtencomments/play.png" >
+        <img class="sleepy"  src="Assetination/writtencomments/sleepycat.png" >
+        <img class="wtf"  src="Assetination/writtencomments/wheretfismypackage.png" >
+       
+    </div>
+
     <div class="imagecontainer">
-        <img class="polaroidBlue"  src="Assetination/polaroids/bluepolaroid.png" >
+        <img class="polaroidBlue"  src="Assetination/polaroids/bluepolaroid1.png" >
         <img class="polaroidPink"  src="Assetination/polaroids/pinkpolaroid.png" >
         <img class="polaroidYellow"  src="Assetination/polaroids/yellowpolaroid.png" >
         <img class="polaroidOrange"  src="Assetination/polaroids/orangepolaroid.png" >
