--- a/Main.html
+++ b/Main.html
@@ -14,6 +14,8 @@
     <img class="title" src="Assetination/polaroids/title.png" alt="title">
     <img class="thread" src="Assetination/polaroids/thread2.png" alt="thread">
     <img class="cat" src="Assetination/polaroids/catwalking.gif" alt="walkingcat">
+    <img class="cutletters" src="Assetination/writtencomments/space.png" alt="space">
+    <img class="catinrocket" src="Assetination/rocketwithcat2.png" alt="rocketandcat">
 
     <div class="commentsRight" >
         <img class="boxdrawing"  src="Assetination/writtencomments/box1.png" >
