Linked html to html

--- a/Main.html
+++ b/Main.html
@@ -29,7 +29,7 @@
         <img class="wtf"  src="Assetination/writtencomments/wheretfismypackage.png" >
        
     </div>
-
+    <a href="index.html"> 
     <div class="imagecontainer">
         <img class="polaroidBlue"  src="Assetination/polaroids/bluepolaroid1.png" >
         <img class="polaroidPink"  src="Assetination/polaroids/pinkpolaroid.png" >
@@ -38,6 +38,7 @@
         <img class="polaroidgreen"  src="Assetination/polaroids/greenpolaroid.png" >
         <img class="polaroiddarkblue"  src="Assetination/polaroids/darkbluepolaroid.png" >
     </div>
+  </a>
    <!--  <div class="container">
         <script class="javascript"src="sketch.js"></script>
     </div> -->
