--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <img class="catinrocket" src="Assetination/rocketwithcat2.png" alt="rocketandcat">
 
     <div class="commentsRight" >
+        <img class="starthere" src="Assetination/writtencomments/starthere.png">
         <img class="boxdrawing"  src="Assetination/writtencomments/box1.png" >
         <img class="catidea"  src="Assetination/writtencomments/catidea.png" >
         <img class="kitty"  src="Assetination/writtencomments/kitty.png" >
@@ -31,12 +32,13 @@
     </div>
     <a href="canvas.html"> 
     <div class="imagecontainer">
-        <img class="polaroidBlue"  src="Assetination/polaroids/bluepolaroid1.png" >
-        <img class="polaroidPink"  src="Assetination/polaroids/pinkpolaroid.png" >
-        <img class="polaroidYellow"  src="Assetination/polaroids/yellowpolaroid.png" >
-        <img class="polaroidOrange"  src="Assetination/polaroids/orangepolaroid.png" >
-        <img class="polaroidgreen"  src="Assetination/polaroids/greenpolaroid.png" >
-        <img class="polaroiddarkblue"  src="Assetination/polaroids/darkbluepolaroid.png" >
+        <img class="polaroidBlue"  src="Assetination/menuframes/start1.png" >
+        <img class="polaroidPink"  src="Assetination/menuframes/chapter2.jpg" >
+        <img class="polaroidYellow"  src="Assetination/menuframes/chapter3.jpg" >
+        <img class="polaroidOrange"  src="Assetination/menuframes/chapter4.jpg" >
+        <img class="polaroidgreen"  src="Assetination/menuframes/chapter5.jpg" >
+        <img class="polaroiddarkblue"  src="Assetination/menuframes/chapter6.jpg" >
+        <img class="polaroiddarkblue"  src="Assetination/menuframes/chapter7.jpg" >
     </div>
   </a>
    <!--  <div class="container">
